feat(java): implement effective pagination for GET /v1/lamps